[package]
name = "test"
version = "0.1.0"
authors = ["neithanmo <neithanmo@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
actix = "0.8.2"
actix-codec = "0.1.2"
actix-web = "1.0.0"
actix-web-actors = "1.0.0"
actix-files = "0.1.1"
awc = "0.2.1"
env_logger = "0.6"
futures = "0.1"
bytes = "0.4"
lazy_static = "1.3.0"
parking_lot = "0.9.0"
rand = "0.7.0"
clap = "2.33.0"
actix-http = "0.2.10"
